// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DomainSelect it renders DomainsSelect loading state correctly 1`] = `
<select
  className="form-select"
  disabled={true}
  onChange={[Function]}
  onFocus={[Function]}
  value="foo"
>
  <option>
    Loading
    ...
  </option>
</select>
`;

exports[`DomainSelect it renders DomainsSelect with one domain correctly 1`] = `
<select
  className="form-select"
  disabled={true}
  onChange={[Function]}
  onFocus={[Function]}
  value="foo"
>
  <option
    value="foo"
  >
    @
    foo
  </option>
</select>
`;

exports[`DomainSelect it renders DomainsSelect with two domains correctly 1`] = `
<select
  className="form-select"
  disabled={false}
  onChange={[Function]}
  onFocus={[Function]}
  value="foo"
>
  <option
    value="foo"
  >
    @
    foo
  </option>
  <option
    value="bar"
  >
    @
    bar
  </option>
</select>
`;
